refactor: Reader 객체 분리, 리팩토링